# ChangeLog for net-misc/nstx
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nstx/ChangeLog,v 1.4 2007/02/22 11:13:35 robbat2 Exp $

  22 Feb 2007; Robin H. Johnson <robbat2@gentoo.org>
  files/digest-nstx-1.1_beta6, files/digest-nstx-1.1_beta6-r1, Manifest:
  Manifest cleanup.

*nstx-1.1_beta6-r2 (02 Apr 2006)

  02 Apr 2006; Robin H. Johnson <robbat2@gentoo.org>
  +nstx-1.1_beta6-r2.ebuild:
  Use the debian patch to work around some software bugs. Bug #127861.

*nstx-1.1_beta6-r1 (21 Jul 2005)

  21 Jul 2005; Robin H. Johnson <robbat2@gentoo.org>
  +nstx-1.1_beta6-r1.ebuild:
  Bug #99503, ethertap stuff is available in proper kernel headers now.

*nstx-1.1_beta6 (08 Jun 2005)

  08 Jun 2005; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +nstx-1.1_beta6.ebuild:
  Bug #74322. Based on initial submission by Andre Kloth
  <bugs-gentoo@blubbmon.de>.
