@@ -1,21 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST nstx-1.1-beta6.tgz 20458 RMD160 1392d7f96c9668cc40b65fa30cbaf8cf1b64feb2 SHA1 82d339f499c6e625708371f5f729b7f7bf38a6a0 SHA256 57a1962a66e9cb64fe70839d852c56cd253092260eab589a8173740b75b21450
 DIST nstx_1.1-beta6-4.diff.gz 7743 RMD160 dc4d153ee5c38b3813e1612fecf079683b72e8e0 SHA1 a80cbdfa2b0f8e21d43467a974bb64ffe76fcb32 SHA256 f2fc046cc08831599f2a95c874b7a028238c73e1f2cd4964ee86aa4c4307b8a8
 EBUILD nstx-1.1_beta6-r1.ebuild 799 RMD160 1da9c7c3ebbebc7295e508893d0c9ca94f3602c6 SHA1 a6123466eb6d803d5f1416f2da10eb4ca863cfae SHA256 cddbd29d19dec45b8822d8d61ec80cdda938d7a34648818fb2420aad753a18b6
 MD5 31b2e76239b50ba7663f783bcf6ea0b6 nstx-1.1_beta6-r1.ebuild 799
 RMD160 1da9c7c3ebbebc7295e508893d0c9ca94f3602c6 nstx-1.1_beta6-r1.ebuild 799
 SHA256 cddbd29d19dec45b8822d8d61ec80cdda938d7a34648818fb2420aad753a18b6 nstx-1.1_beta6-r1.ebuild 799
-EBUILD nstx-1.1_beta6-r2.ebuild 1028 RMD160 dfc9312ec145a0ecd03a81dc294954a14e2bac87 SHA1 6a430abb407df9a948d5a85d5cf89858f9a6bda8 SHA256 6004dafe3858cdd83bfb07e88288037d08df902e6ff811e5c2da577427d9b56c
-MD5 4ccb107030a664f6fdd123befc51c180 nstx-1.1_beta6-r2.ebuild 1028
-RMD160 dfc9312ec145a0ecd03a81dc294954a14e2bac87 nstx-1.1_beta6-r2.ebuild 1028
-SHA256 6004dafe3858cdd83bfb07e88288037d08df902e6ff811e5c2da577427d9b56c nstx-1.1_beta6-r2.ebuild 1028
+EBUILD nstx-1.1_beta6-r2.ebuild 1025 RMD160 8a2a7c5d1c8657f6888e6db25f7c12ab8a195c34 SHA1 dd3cca13d23f60bd0a9770294bd79bae5b130866 SHA256 c142746d19c409092319c7f2936f5811346ac12ce8186e6034208b0e242f6f0d
+MD5 35a46bf69c6ee9121af73f17c3951bab nstx-1.1_beta6-r2.ebuild 1025
+RMD160 8a2a7c5d1c8657f6888e6db25f7c12ab8a195c34 nstx-1.1_beta6-r2.ebuild 1025
+SHA256 c142746d19c409092319c7f2936f5811346ac12ce8186e6034208b0e242f6f0d nstx-1.1_beta6-r2.ebuild 1025
 EBUILD nstx-1.1_beta6.ebuild 802 RMD160 4da9155cfb7124036b37a9da92a5e25e0df842b5 SHA1 870a77764641ec7f7796908d8e5047adc825c08b SHA256 31385cf2e6d978565bbed4176f2bd368769d69726199a3d5995a67e4600ddf76
 MD5 cd6bda7470de36aaddf4274b283431e8 nstx-1.1_beta6.ebuild 802
 RMD160 4da9155cfb7124036b37a9da92a5e25e0df842b5 nstx-1.1_beta6.ebuild 802
 SHA256 31385cf2e6d978565bbed4176f2bd368769d69726199a3d5995a67e4600ddf76 nstx-1.1_beta6.ebuild 802
-MISC ChangeLog 936 RMD160 807b1a917153b887f7099b06d50a7bc4be8690f2 SHA1 da105a3528e937b415bc40fe2c01b54dcdc8eb3e SHA256 cd297b0a1b521a5f0352c2f4fcfa0cfd10bcebca74db528734da683daaed9fde
-MD5 7927cb3f15012a2dab68bee8c3019baa ChangeLog 936
-RMD160 807b1a917153b887f7099b06d50a7bc4be8690f2 ChangeLog 936
-SHA256 cd297b0a1b521a5f0352c2f4fcfa0cfd10bcebca74db528734da683daaed9fde ChangeLog 936
+MISC ChangeLog 1042 RMD160 d180a7218791df1f6b77463665aa31f92e7d2d67 SHA1 aef4f8fa8652e553f8c2b402cbd6345b6234db3b SHA256 11adbcd366f0034545e263e5ed2194f3281209a21f14e3249e22a0bdcfaa8451
+MD5 271788397727400818f2aa6778f498c6 ChangeLog 1042
+RMD160 d180a7218791df1f6b77463665aa31f92e7d2d67 ChangeLog 1042
+SHA256 11adbcd366f0034545e263e5ed2194f3281209a21f14e3249e22a0bdcfaa8451 ChangeLog 1042
 MISC metadata.xml 223 RMD160 ffa99612cf27469c417944deed0e0c9155e64331 SHA1 607c637402dd253406aa6ee684471a702c5d1a99 SHA256 d6bb9ba68629616062b4433ab3b8fb01dfcafae5bb47804d9e06cdd6c66daa44
 MD5 21cd68602737d7c996bceabf6e62c468 metadata.xml 223
 RMD160 ffa99612cf27469c417944deed0e0c9155e64331 metadata.xml 223
@@ -29,3 +32,10 @@ SHA256 50ad356ba66b8b4d6f076f8e56d795a50f0cc59cebeb25e296434fd941cae23f files/di
 MD5 153ee70b00c412373a90f84145182c69 files/digest-nstx-1.1_beta6-r2 479
 RMD160 09a733cd80073345b560be9adc4ea482edb117d2 files/digest-nstx-1.1_beta6-r2 479
 SHA256 cb31329378ad110c079f1626abc1f03ab0ef11df70e910a93aafe269325a7e66 files/digest-nstx-1.1_beta6-r2 479
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGbxTLz974XjDVpbkRAl+CAKCwt5M5czB6F2mUkSyNimPvl5GSNACgvKwF
+LQCPBMlg4Jqx1XarlX4oxTU=
+=rFg6
+-----END PGP SIGNATURE-----
